# ds-project-template

./: .gitignore  cookiecutter.json  readme.md
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.directory_name}}/: .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.directory_name}}/notebooks/: eda.ipynb
