[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.compatible_python_versions}}"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
